// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test EmployeeList component with data found 1`] = `
<Fragment>
  <Container>
    <Divider
      horizontal={true}
    >
      <Header
        as="h4"
      >
        Employee Detail
      </Header>
    </Divider>
    <CardGroup>
      <EmployeeCard
        employee={
          Object {
            "department": "UI",
            "designation": "React developer",
            "id": 1,
            "name": "Omkar",
          }
        }
        key="1"
      />
      <EmployeeCard
        employee={
          Object {
            "department": "UI",
            "designation": "React developer",
            "id": 2,
            "name": "Jigar",
          }
        }
        key="2"
      />
    </CardGroup>
  </Container>
</Fragment>
`;

exports[`Test EmployeeList component with data not defined, shows loading... 1`] = `
<Fragment>
  <Container>
    <Divider
      horizontal={true}
    >
      <Header
        as="h4"
      >
        Employee Detail
      </Header>
    </Divider>
    <Loader
      active={true}
      inline="centered"
    />
  </Container>
</Fragment>
`;

exports[`Test EmployeeList component with zero data found 1`] = `
<Fragment>
  <Container>
    <Divider
      horizontal={true}
    >
      <Header
        as="h4"
      >
        Employee Detail
      </Header>
    </Divider>
    <p>
      No records founds!
    </p>
  </Container>
</Fragment>
`;
